# mcp-websearch

./: .env.example  README.md  pyproject.toml
docs/plans/: 2026-03-10-websearch-mcp-design.md  2026-03-10-websearch-mcp.md
src/mcp_websearch/: server.py
